--- a/.github/workflows/workflow_containerapp.yml
+++ b/.github/workflows/workflow_containerapp.yml
@@ -26,5 +26,5 @@ jobs:
     - name: Build and Push Image
       run: |
         az acr login --name microhackregistrydj --username ${{ secrets.ACR_USERNAME }} --password ${{ secrets.ACR_PASSWORD }} &&
-        docker build -t microhackregistry.azurecr.io/microhackapp:1 -f Dockerfile . &&
-        docker push microhackregistry.azurecr.io/microhackapp:1
+        docker build -t microhackregistrydj.azurecr.io/microhackapp:1 -f Dockerfile . &&
+        docker push microhackregistrydj.azurecr.io/microhackapp:1
